fixed issue with sliding-menu-button going underneath mapbox maps by adjusting the z-index of the mapbox maps to -1 in css.

--- a/app/assets/stylesheets/discovers.css.scss
+++ b/app/assets/stylesheets/discovers.css.scss
@@ -21,6 +21,7 @@ body {
   height: 450px;
   margin: 0 auto 0 auto;
   border-bottom: 8px solid $orange;
+  z-index: -1
 }
 .notes {
   padding-top: 35px;
