--- a/app/assets/stylesheets/rambles.css.scss
+++ b/app/assets/stylesheets/rambles.css.scss
@@ -26,6 +26,7 @@
   margin: 0 auto;
   margin-top: 20px;
   border-bottom: 8px solid $orange;
+  z-index: -1
 }
 .recommended-notes {
 }
